// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component Error 1`] = `
<div
  className="error-data"
>
  <div
    className="content-img"
  >
    <img
      alt="No found"
      src="noFound.png"
    />
  </div>
  <p
    className="text"
  >
    Opps, something went wrong..
  </p>
</div>
`;

exports[`renders the component ErrorData 1`] = `
<div
  className="error-data"
>
  <div
    className="content-img"
  >
    <img
      alt="No found"
      src="noFound.png"
    />
  </div>
  <p
    className="text"
  >
    Opps, something went wrong..
  </p>
</div>
`;

exports[`renders the component Loading 1`] = `
<div
  className="loading"
>
  <div
    className="spinner"
  />
  <p
    className="text"
  >
    Loading
  </p>
</div>
`;
